--- a/assets/style.css
+++ b/assets/style.css
@@ -2,7 +2,6 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: 'Ubuntu', 'Arial', sans-serif;
   word-wrap: break-word;
   word-break: break-word;
 }
@@ -23,6 +22,7 @@ html, body {
   align-items: center;
   justify-content: center;
   background: rgba(255, 255, 255, 0);
+  text-align: center;
   color: #000;
 }
 
@@ -42,7 +42,26 @@ html, body {
   border: none;
   padding: 10px 20px;
 
+
 }
+
+#header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f8f8f8;
+  margin-bottom: 50px;
+  text-align: center;
+  padding-top: 20px;
+}  
+
+
+.logo {
+  width: 10%;
+
+
+} 
 
 #download[disabled] {
   opacity: 0.3;
@@ -93,13 +112,15 @@ html, body {
   cursor: pointer;
   display: inline-block;
   margin: 2vh 1vw 2vw 0;
+  margin-top: 20px;
+
 }
 
 .file-input {
   display: none;
 }
 h1 {
-  background-color: orange;
+  background-color: rgb(0, 135, 0);
   color: white;
   font-family: 'Helvetica Neue', sans-serif; /* Exemple de police moderne, tu peux la changer selon tes préférences */
   text-align: center;
@@ -114,7 +135,8 @@ h1 {
   line-height: 1.5;
   max-width: 80%;
   text-align: center;
-  color: #333;
+  align-items: center;
+  color: #030303;
 }
 
 #welcome-paragraph a {
@@ -129,8 +151,8 @@ h1 {
 
 
 .upper-canvas {
-  -webkit-box-shadow: 1px 0px 38px 12px #464646;
-  box-shadow: 1px 0px 38px 12px #828282;
+  -webkit-box-shadow: 1px 0px 38px 12px #363636;
+  box-shadow: 1px 0px 38px 12px #e6e6e6;
 }
 
 .orange-button {
